--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         If you`re thinking about visiting Italy for a holiday, then here are some things you
                         should know before traveling there:
                         Italy is a country that has so much to offer. The people, the culture, the food, and
-                        everything else. Italy is such a beautiful country. It`s on of the favorite places to visit
+                        everything else. Italy is such a beautiful country. It`s one of the favorite places to visit
                         especially for holidays. <br /> <br />
                         *Italy is huge!* You`ll need to do plenty of research before deciding which region you
-                        want to visit because they vary greatly in size ans geography.<br /> <br />
+                        want to visit because they vary greatly in size and geography.<br /> <br />
                         How to have the best Italy holidays? There are so many areas to explore, from Tuscany
                         and Liguria, with their hills and mountains, to Sicily and Sardinia with their beautiful
                         beaches. We`ve picked out the best Italy holiday destinations so you can get the most out of
